# public/swagger.json
@@ -628,6 +628,53 @@
                 ]
             }
         },
+        "/api/v1/permission/{permission}/attach": {
+            "post": {
+                "tags": [
+                    "Permission"
+                ],
+                "summary": "associate permission to category",
+                "description": "associate permission to category",
+                "operationId": "3344e44e418f061a353220e404f9de1a",
+                "parameters": [
+                    {
+                        "name": "permission",
+                        "in": "path",
+                        "description": "permission identification",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "category_id": {
+                                        "description": "category id",
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "An example resource"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/v1/release": {
             "get": {
                 "tags": [
